# storyteller

./: .gitignore  README.md  pyproject.toml  requirements.txt  storyteller.py
.streamlit/: config.toml  secrets.toml
prompts/: beat.md  concept.md  critique.md
src/storyteller/: __init__.py
tests/: test_integration.py  test_logic_robustness.py  test_storyteller.py
